hphp/hack/test/typecheck/missing_tparam2.php.exp
File "missing_tparam2.php", line 18, characters 14-14:
The type A expects 1 type parameter(s) (Typing[4101])
File "missing_tparam2.php", line 12, characters 7-7:
Definition is here
